--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,5 @@ VSCODE/ESP32HelloWorld/.vscode/c_cpp_properties.json
 VSCODE/ESP32HelloWorld/.vscode/launch.json
 VSCODE/ESP32HelloWorld/.vscode/ipch
 
+.vscode/
+VSCODE/HelloWorld2/build/
